# Clinico-AI

ai/: .dockerignore  Dockerfile  audio.rttm  requirements.txt  transcript_sample.py
ai/src/: .gitignore  Dockerfile  cofig.py  docker-compose.yml  main.py  pyproject.toml
ai/src/agents/chat_agent/: chat_agent.py
ai/src/agents/chat_agent/tools/: rag_tool.py
ai/src/agents/document_agent/: document_agent.py
ai/src/agents/document_agent/tools/: generate_document_tool.py
ai/src/core/: diarization.py  soap_generator.py  transcription.py
ai/src/core/agents/: medical_classification.py
ai/src/core/document_generator/: DAP_generator.py  DeepAnalysis_generator.py  PIE_generatory.py  SOAP_generator.py  answer_generator.py  custom_document_generator.py  referral_generator.py  summary_generator.py
ai/src/core/model/: llm_schemas.py  model.py
ai/src/service/: document_service.py  s3_service.py  transcription_service.py
app/.next/: trace
client/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
client/app/: helper_commands.txt  layout.tsx  page.tsx
client/app/components/:  LocalFileUploader.tsx  AIAssistant.tsx  AIAssitanat.tsx  CautionComponent.tsx  ChatComponent.tsx  DeepAnalysisModal.tsx  DocumentationPanel.tsx  MedicalHeader.tsx  ModernSidebar.tsx  NavBar.tsx  PatientForm.tsx  SessionDocumentsPanel.tsx  TemplateForm.tsx  TranscriptionPanel.tsx  action.ts
client/app/dashboard/: action.ts  layout.tsx  page.tsx
client/public/: ai_animation.webm  ai_thinking.webm  loading.webm
infrastructure/: main.tf  terraform.tfstate.backup
rag/: Dockerfile  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
rag/src/: index.ts  save.ts  server.ts  similarity.ts
(+51 files in other folders)
