[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    { name = "Rakesh Kanneeswaran", email = "rakikanneeswaran@gmail.com" }
]
requires-python = ">=3.11,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
black = ">=25.1.0,<26.0.0"
flake8 = ">=7.3.0,<8.0.0"
pyannote-audio = ">=3.3.2,<4.0.0"
fastapi = ">=0.116.1,<0.117.0"
pydantic = ">=2.11.7,<3.0.0"
uvicorn = ">=0.35.0,<0.36.0"
boto3 = ">=1.40.5,<2.0.0"
langchain = ">=0.3.27,<0.4.0"
langchain-community = ">=0.3.27,<0.4.0"
langchain-core = ">=0.3.74,<0.4.0"
langchain-groq = ">=0.3.7,<0.4.0"
python-dotenv = ">=1.1.1,<2.0.0"
llvmlite = "^0.44.0"
numba = "^0.61.2"
openai-whisper = "^20250625"
langgraph = "^0.6.8"
langsmith = "^0.4.31"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
